fix: branch setting in .gitlab-ci.yml (remember to read what you're copying)

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,6 @@ pages:
       # Path of our artifacts
       - public
 
-  # This config will only publish changes that are pushed on the master branch
+  # This config will only publish changes that are pushed on the main branch
   only:
-    - master
+    - main
