--- a/theme.toml
+++ b/theme.toml
@@ -1,9 +1,9 @@
 name = "no style, please!"
 description = "A (nearly) no-CSS, fast, minimalist Zola theme"
 license = "MIT"
-homepage = "https://gitlab.com/4bcx/no-style-please"
+homepage = "https://gitlab.com/atgumx/no-style-please"
 min_version = "0.4.0"
-demo = "https://4bcx.gitlab.io/no-style-please"
+demo = "https://atgumx.gitlab.io/no-style-please"
 
 [extra]
 
