--- a/theme.toml
+++ b/theme.toml
@@ -10,7 +10,7 @@ demo = "https://atgumx.gitlab.io/no-style-please"
 # The theme author info: you!
 [author]
 name = "Ahmed Alaa"
-homepage = "https://4b.cx"
+homepage = "https://gumx.cc"
 
 [original]
 author =  "Riccardo Graziosi"
