--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://4bcx.gitlab.io/no-style-please/"
+base_url = "https://atgumx.gitlab.io/no-style-please/"
 title = "no style, please!"
 description = "A (nearly) no-CSS, fast, minimalist Zola theme."
 
