--- a/config.toml
+++ b/config.toml
@@ -18,10 +18,10 @@ highlight_code = true
 author = "Ahmed Alaa"
 logo = "images/logo.png"
 header_nav = [
-    { name = "~home", url = "/" },
-    { name = "#tags", url = "/tags" },
-    { name = "+categories", url = "/categories" },
-    { name = "@contexts", url = "/contexts" },
+    { name = "~home", url = "/no-style-please/" },
+    { name = "#tags", url = "/no-style-please/tags" },
+    { name = "+categories", url = "/no-style-please/categories" },
+    { name = "@contexts", url = "/no-style-please/contexts" },
 ]
 footer_nav = [
     { name = "< previous", url = "#" },
