--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,7 @@ title = "no style, please!"
 description = "A (nearly) no-CSS, fast, minimalist Zola theme."
 
 compile_sass = true
-generate_feed = true
+generate_feeds = true
 
 taxonomies = [
     { name = "tags" },
